--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Aquabot-MD",
+  "name": "Aseel-Bot",
   "version": "1.0.0",
-  "description": "aquabot happy for whatsapp.",
+  "description": "aseelbot happy for whatsapp.",
   "main": "/aquabot/bot.js",
   "type": "commonjs",
   "scripts": {
